# ini-parser-packer

./: .gitignore  CMakeLists.txt  README.md  test0.ini
example/: main.cpp
include/inipp/: inipp.hpp
